[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15" }
rand = "0.8.5"
bevy-inspector-egui = "0.28.0"
avian3d = { git = "https://github.com/Jondolf/avian.git" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/dynamic_linking",
]